# experiment-ai-on-esp32

./: Cargo.toml  README.md  gen_model.py
dummy-memmap2/: Cargo.toml
dummy-memmap2/src/: lib.rs
src/: main.rs  mmap.rs
