[package]
name = "esp-candle"
version = "0.1.0"
authors = ["TheMagicNacho <themagicnacho@protonmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-candle"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Use candle-core without default features to avoid memmap2 dependency
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", default-features = false }
# These are common dependencies that might be needed
tokio = { version = "1.45.0", features = ["rt", "macros"] }

[build-dependencies]
embuild = "0.33"

[patch.crates-io]
# Use our custom dummy implementation of memmap2
memmap2 = { path = "./dummy-memmap2" }
